--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
             W znaczniku INPUT z parametrem TYPE o wartości "checkbox" lub "radio" można za pomocą parametru CHECKED domyślnie uaktywnić dane pole przy wejściu do formularza.
 
             http://fizyka.umk.pl/~jacek/docs/html32ref/input.htm#:~:text=W%20znaczniku%20INPUT%20z%20parametrem,pole%20przy%20wej%C5%9Bciu%20do%20formularza. -->
+        <!-- Tutaj będzie użyty, żeby można było "zaklikać i odklikać" rozwijalne menu w trybie tablet/mobile -->
         <input type="checkbox" id="show-menu" />
+        <label for="show-menu" class="menu-icon"
+          ><i class="fas fa-bars"></i
+        ></label>
       </nav>
     </div>
   </body>
