--- a/index.html
+++ b/index.html
@@ -51,10 +51,90 @@
             http://fizyka.umk.pl/~jacek/docs/html32ref/input.htm#:~:text=W%20znaczniku%20INPUT%20z%20parametrem,pole%20przy%20wej%C5%9Bciu%20do%20formularza. -->
         <!-- Tutaj będzie użyty, żeby można było "zaklikać i odklikać" rozwijalne menu w trybie tablet/mobile -->
         <input type="checkbox" id="show-menu" />
-        <label for="show-menu" class="menu-icon"
-          ><i class="fas fa-bars"></i
-        ></label>
+        <!-- Tabela, w której będzie znajdować się ikona "hamburger menu" -->
+        <label for="show-menu" class="menu-icon">
+          <!-- Klasa fas fa-bar to klasa zaciągnięta z repozytorium cdnjs.* -> ostatni link w <head> -->
+          <i class="fas fa-bars"></i>
+        </label>
+        <!-- Klasa dla obrazu logo i nazwy danej firmy -->
+        <div class="content">
+          <!-- Klasa dla logo -->
+          <div class="logo">
+            <!-- Link, który po kliknięciu przekieruje na stronę główną -->
+            <a href="index.html">
+              <!-- Obraz logo i osobne klasy "img" i "nav-img"(kiedy w parametrze "class" umieści się spację, to jest to połączenie dwóch klas. W tym przypadku "img nav-img") -->
+              <img
+                class="img nav-img"
+                src="./images/logo-sample.png"
+                width="50px"
+                height="50px"
+              />Nazwa Firmy</a
+            >
+          </div>
+          <!-- Klasa dla uporządkowanej listy linków ("ul") -->
+          <ul class="links">
+            <li class="link"><a href="index.html">Strona główna</a></li>
+            <li class="link"><a href="podstrona-1.html">Podstrona 1</a></li>
+            <li class="link"><a href="podstrona-2.html">Podstrona 2</a></li>
+            <li class="link"><a href="podstrona-3.html">Podstrona 3</a></li>
+          </ul>
+        </div>
       </nav>
+    </div>
+
+    <div class="dummy-text">
+      <h1>Przykładowy prosty pasek nawigacji z menu</h1>
+      <h2>Strona główna</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
+        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
+        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+      </p>
     </div>
   </body>
 </html>
