--- a/podstrona-2.html
+++ b/podstrona-2.html
@@ -7,7 +7,13 @@
 
     <title>Simple responsive navbar menu</title>
 
-    <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style-podstrona-2.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
@@ -21,15 +27,14 @@
   <body>
     <header>
       <div class="logo">
-        <!-- <a href="index.html">
+        <a href="index.html" class="nav-a">
           <img
-            class="img nav-img"
             src="./images/logo-sample.png"
             width="40px"
             height="40px"
           />LOGO</a
-        > -->
-        <h1>LOGO</h1>
+        >
+        <!-- <h1>LOGO</h1> -->
       </div>
 
       <input type="checkbox" id="menu" hidden />
