--- a/index.html
+++ b/index.html
@@ -3,138 +3,120 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Metatag X-UA-Compatible pozwala autorom stron internetowych wybrać, 
-        w jakiej wersji Internet Explorera ma być renderowana strona. 
-        W zależności od obsługiwanych przeglądarek firmy Microsoft dalsze korzystanie z X-UA-Compatibletagu może nie być konieczne.
-        Jeśli potrzebujesz obsługi IE9 lub IE8, polecam użycie tagu. -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- Tytuł strony -->
     <title>Simple responsive navbar menu</title>
 
-    <!-- Link do stylów resetowania styli
-        Każdy interpreter (np. przeglądarka internetowa) posiada swoje domyślne style,
-        np. domyślne marginesy. W celu zresetowania domyślnych styli można użyć gotowych .css.
-        Przykłady:
-        https://www.youtube.com/watch?v=5e0wuvhxLk4
-        https://css-tricks.com/an-interview-with-elad-shechter-on-the-new-css-reset/#top-of-site
-        https://byby.dev/normalize-css
-        https://meyerweb.com/eric/tools/css/reset/ -->
-    <link rel="stylesheet" href="./css/reset.css" />
-
-    <!-- Link do stylów lokalnych -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    /> -->
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
-
-    <!-- Link do stylów zewnętrznych bibliotek, np. fontów
-        Nie jest to konieczne dla każdego z projektów i może być dobierane dowolnie
-        - dokumentacja https://www.angularjswiki.com/fontawesome/cdn/
-        - linki do blibliotek https://cdnjs.com/libraries/font-awesome
-        Można umieścić również @import w style.css. Natomiast najpierw ładowany jest index.html a dopiero później style.css, więc w przypadku niedostępności style.css style się rozjadą -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
   <body>
-    <!-- Klasa "opakowania" -->
-    <div class="wrapper">
-      <!-- Klasa nawigacji -->
-      <nav class="nav">
-        <!-- INPUT stosuje się w obrębie formularzy. 
-            Znacznik ten tworzy zarówno jednowierszowe pola tekstowe, pola opcji (checkbox) i pola przełączników (radio button), jak i kasuje zawartości wszystkich pól oraz wydaje polecenie wysłania treści formularza do serwera.
-            Jego konkretną funkcję określa się parametrem TYPE.
+    <header>
+      <div class="logo">
+        <a href="index.html" class="nav-a">
+          <img
+            src="./images/logo-sample.png"
+            width="40px"
+            height="40px"
+          />LOGO</a
+        >
+      </div>
 
-            CHECKED
-            W znaczniku INPUT z parametrem TYPE o wartości "checkbox" lub "radio" można za pomocą parametru CHECKED domyślnie uaktywnić dane pole przy wejściu do formularza.
+      <input type="checkbox" id="menu" hidden />
+      <label for="menu"><i class="fa fa-bars"></i></label>
 
-            http://fizyka.umk.pl/~jacek/docs/html32ref/input.htm#:~:text=W%20znaczniku%20INPUT%20z%20parametrem,pole%20przy%20wej%C5%9Bciu%20do%20formularza. -->
-        <!-- Tutaj będzie użyty, żeby można było "zaklikać i odklikać" rozwijalne menu w trybie tablet/mobile -->
-        <input type="checkbox" id="show-menu" />
-        <!-- Tabela, w której będzie znajdować się ikona "hamburger menu" -->
-        <label for="show-menu" class="menu-icon">
-          <!-- Klasa fas fa-bar to klasa zaciągnięta z repozytorium cdnjs.* -> ostatni link w <head> -->
-          <i class="fas fa-bars"></i>
-        </label>
-        <!-- Klasa dla obrazu logo i nazwy danej firmy -->
-        <div class="content">
-          <!-- Klasa dla logo -->
-          <div class="logo">
-            <!-- Link, który po kliknięciu przekieruje na stronę główną -->
-            <a href="index.html">
-              <!-- Obraz logo i osobne klasy "img" i "nav-img"(kiedy w parametrze "class" umieści się spację, to jest to połączenie dwóch klas. W tym przypadku "img nav-img") -->
-              <img
-                class="img nav-img"
-                src="./images/logo-sample.png"
-                width="50px"
-                height="50px"
-              />Nazwa Firmy</a
-            >
-          </div>
-          <!-- Klasa dla uporządkowanej listy linków ("ul") -->
-          <ul class="links">
-            <li class="link"><a href="index.html">Strona główna</a></li>
-            <li class="link"><a href="podstrona-1.html">Podstrona 1</a></li>
-            <li class="link"><a href="podstrona-2.html">Podstrona 2</a></li>
-            <li class="link"><a href="podstrona-3.html">Podstrona 3</a></li>
-          </ul>
-        </div>
+      <nav>
+        <label for="menu"><i class="fa-solid fa-xmark"></i></label>
+        <ul>
+          <li><a href="#">Strona główna</a></li>
+          <li><a href="#">O nas</a></li>
+          <li><a href="#">Projekty</a></li>
+          <li><a href="#">Kontakt</a></li>
+        </ul>
       </nav>
-    </div>
+    </header>
+    <div class="container-text">
+      <h1 class="header-text">Witamy na stronie</h1>
+      <h2 class="title-text">Zrelizowane projekty</h2>
+      <h3 class="subtitle-text">Projekt - 1</h3>
+      <p class="paragraph-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
 
-    <div class="dummy-text">
-      <h1>Przykładowy prosty pasek nawigacji z menu</h1>
-      <h2>Strona główna</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta corrupti
-        adipisci, pariatur maiores nisi dignissimos? Quae, reprehenderit quod
-        tempore quisquam similique vel, cum tenetur sed eum sint quas ab eos!
+      <h3 class="subtitle-text">Projekt - 2</h3>
+      <p class="paragraph-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <h3 class="subtitle-text">Projekt - 3</h3>
+      <p class="paragraph-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <h3 class="subtitle-text">Projekt - 4</h3>
+      <p class="paragraph-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
+
+      <h3 class="subtitle-text">Projekt - 5</h3>
+      <p class="paragraph-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
       </p>
     </div>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">Strona główna</a></li>
+          <li><a href="#">O nas</a></li>
+          <li><a href="#">Projekty</a></li>
+          <li><a href="#">Kontakt</a></li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
