--- a/projects.html
+++ b/projects.html
@@ -7,14 +7,15 @@
 
     <title>Simple responsive navbar menu</title>
 
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/style-podstrona-2.css" />
+    /> -->
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -34,7 +35,6 @@
             height="40px"
           />LOGO</a
         >
-        <!-- <h1>LOGO</h1> -->
       </div>
 
       <input type="checkbox" id="menu" hidden />
