--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </header>
     <div class="container-text">
       <h1 class="header-text">Witamy na stronie</h1>
-      <h2 class="title-text">Zrelizowane projekty</h2>
-      <h3 class="subtitle-text">Projekt - 1</h3>
+      <h2 class="title-text">Strona przedsawiająca przykładowy układ menu</h2>
+      <h3 class="subtitle-text">Sticky</h3>
       <p class="paragraph-text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -64,7 +64,7 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Projekt - 2</h3>
+      <h3 class="subtitle-text">Responsive</h3>
       <p class="paragraph-text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -75,7 +75,7 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Projekt - 3</h3>
+      <h3 class="subtitle-text">Simply</h3>
       <p class="paragraph-text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -86,7 +86,7 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Projekt - 4</h3>
+      <h3 class="subtitle-text">Without javascript</h3>
       <p class="paragraph-text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
@@ -97,7 +97,7 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Projekt - 5</h3>
+      <h3 class="subtitle-text">Black</h3>
       <p class="paragraph-text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
