--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     />
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <a href="index.html" class="nav-a">
+    <header class="header-container">
+      <div class="logo-container">
+        <a href="index.html" class="logo-link">
           <img
             src="./images/logo-sample.png"
             width="40px"
