--- a/index.html
+++ b/index.html
@@ -43,18 +43,26 @@
       <nav>
         <label for="menu"><i class="fa-solid fa-xmark"></i></label>
         <ul>
-          <li><a href="#">Strona główna</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Projekty</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li>
+            <a class="navigation-link" href="index.html">Strona główna</a>
+          </li>
+          <li>
+            <a class="navigation-link" href="./about.html">O nas</a>
+          </li>
+          <li>
+            <a class="navigation-link" href="./projects.html">Projekty</a>
+          </li>
+          <li>
+            <a class="navigation-link" href="./contact.html">Kontakt</a>
+          </li>
         </ul>
       </nav>
     </header>
-    <div class="container-text">
-      <h1 class="header-text">Witamy na stronie</h1>
-      <h2 class="title-text">Strona przedsawiająca przykładowy układ menu</h2>
-      <h3 class="subtitle-text">Sticky</h3>
-      <p class="paragraph-text">
+    <div class="text-container">
+      <h1 class="text-header">Witamy na stronie</h1>
+      <h2 class="text-title">Strona przedsawiająca przykładowy układ menu</h2>
+      <h3 class="text-subtitle">Sticky</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -64,8 +72,8 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Responsive</h3>
-      <p class="paragraph-text">
+      <h3 class="text-subtitle">Responsive</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -75,8 +83,8 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Simply</h3>
-      <p class="paragraph-text">
+      <h3 class="text-subtitle">Simply</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -86,8 +94,8 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Without javascript</h3>
-      <p class="paragraph-text">
+      <h3 class="text-subtitle">Without javascript</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -97,8 +105,8 @@
         mollit anim id est laborum.
       </p>
 
-      <h3 class="subtitle-text">Black</h3>
-      <p class="paragraph-text">
+      <h3 class="text-subtitle">Black</h3>
+      <p class="text-paragraph">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -111,10 +119,18 @@
     <footer>
       <nav>
         <ul>
-          <li><a href="#">Strona główna</a></li>
-          <li><a href="#">O nas</a></li>
-          <li><a href="#">Projekty</a></li>
-          <li><a href="#">Kontakt</a></li>
+          <li>
+            <a class="navigation-link" href="index.html">Strona główna</a>
+          </li>
+          <li>
+            <a class="navigation-link" href="./about.html">O nas</a>
+          </li>
+          <li>
+            <a class="navigation-link" href="./projects.html">Projekty</a>
+          </li>
+          <li>
+            <a class="navigation-link" href="./contact.html">Kontakt</a>
+          </li>
         </ul>
       </nav>
     </footer>
